@@ -1,6 +1,13 @@
 
 v0.2.0
 
+    * Factor padding algorithm out from the RSA key class, so that it's easier
+      to upgrade to a new scheme:
+          * RSAKeyWithPSS is no more, just use RSAKey
+          * the signature produced by RSAKey.sign() is prefixed with the name
+            of the padding scheme used.
+          * "pss-sha1" is the default padding scheme; change it by setting
+            the attribute "default_padding_scheme" on the key.
     * output hash data in sorted order, for easier debugging by hand.
     * moved signedimp.pkres to signedimp.compat.pkgres.
     * added signedimp.compat.esky, providing code to add signedimp support when
